# fork-parallel-sparse-tools

./: pyproject.toml  setup.py
.github/workflows/: build.yml  codecov.yml  test.yml
slepc_install/: install_slepc.py
src/parallel_sparse_tools/slepc_tools/: slepc_solver.py
test/: test_slepc.py  test_version.py
